--- a/src/index.jade
+++ b/src/index.jade
@@ -12,5 +12,6 @@ html
   body
     .top-line Voix
       .small soon
+      img(src='/assets/img/doge.jpeg')
     script(src='/assets/js/jquery.min.js')
     script(src='/assets/js/bootstrap.min.js')
