--- a/src/less/main.less
+++ b/src/less/main.less
@@ -6,12 +6,12 @@ body {
 }
 
 .top-line {
-  position: fixed;
+  position: absolute;
   z-index: 100;
   top: 0;
   left: 0;
   right: 0;
-  // height: 100%;
+  padding-bottom: 30px;
   font-family: 'Raleway', sans-serif;
   @media (min-width: 400px) {
     font-size: 14em;
