--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,4 @@
-@import url('http://fonts.googleapis.com/css?family=Raleway');
+@import url('http://fonts.googleapis.com/css?family=Orbitron:700');
 /****
 
    colors.css v1.0 For a friendlier looking web
@@ -144,36 +144,223 @@ a:active {
   -webkit-transition: color 0.3s ease-in-out;
   transition: color 0.3s ease-in-out;
 }
+html,
 body {
-  background-color: #ff851b;
+  margin: 0;
 }
-.top-line {
-  position: absolute;
-  z-index: 100;
-  top: 0;
-  left: 0;
-  right: 0;
-  padding-bottom: 30px;
-  font-family: 'Raleway', sans-serif;
-  color: #ffffff;
+body {
+  font-size: 62.5%;
+}
+.voix-brand {
+  margin: 0;
+  font-variant: small-caps;
+  font-family: 'Orbitron', sans-serif;
+  display: inline-block;
+  line-height: 0.8em;
+}
+.voix-brand:before {
+  letter-spacing: 0.13em;
+  content: 'voi';
+}
+.voix-brand:after {
+  letter-spacing: 0;
+  content: 'x';
+}
+header {
+  background-color: #453f3e;
+  color: #f0ebdd;
+  border-bottom: 0.4em solid rgba(123, 112, 110, 0.7);
   text-align: center;
-  vertical-align: middle;
+  padding-bottom: 0.2em;
+  padding-top: 0.2em;
+  padding-left: 1em;
+}
+@media (min-width: 200px) {
+  header > * {
+    font-size: 3.5em;
+  }
 }
 @media (min-width: 400px) {
-  .top-line {
-    font-size: 14em;
+  header > * {
+    font-size: 5.25em;
   }
 }
-@media (min-width: 700px) {
-  .top-line {
-    font-size: 18em;
+@media (min-width: 600px) {
+  header > * {
+    font-size: 7em;
   }
 }
-@media (max-width: 400px) {
-  .top-line {
-    font-size: 10em;
+@media (min-width: 800px) {
+  header > * {
+    font-size: 8.75em;
   }
 }
-.top-line .small {
-  font-size: .2em;
+@media (min-width: 1000px) {
+  header > * {
+    font-size: 10.5em;
+  }
+}
+section {
+  padding: 30px 0 30px 0;
+  font-family: 'Helvetica Neue', Helvetica, arial, freesans, clean, sans-serif;
+  width: 100%;
+}
+section h2 {
+  margin-top: 0;
+  font-weight: 400;
+}
+section h3 {
+  font-weight: 200;
+}
+section .logos,
+section .columns {
+  max-width: 1130px;
+  margin: 0 auto;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+section .logos {
+  padding-bottom: 30px;
+}
+section img {
+  border-radius: 6px;
+  max-width: 100%;
+}
+section .columns {
+  display: table;
+}
+section .columns .column {
+  vertical-align: top;
+  display: table-cell;
+}
+section .columns .column:first-child {
+  padding-right: 30px;
+  padding-left: 10px;
+}
+section .columns .column:last-child {
+  padding-left: 30px;
+  padding-right: 10px;
+}
+section.one {
+  background-color: #ffffff;
+  color: #7c7c7c;
+  border-bottom: 0.4em solid rgba(204, 204, 204, 0.7);
+}
+@media (min-width: 200px) {
+  section.one > * {
+    font-size: 0.6em;
+  }
+}
+@media (min-width: 400px) {
+  section.one > * {
+    font-size: 0.8999999999999999em;
+  }
+}
+@media (min-width: 600px) {
+  section.one > * {
+    font-size: 1.2em;
+  }
+}
+@media (min-width: 800px) {
+  section.one > * {
+    font-size: 1.5em;
+  }
+}
+@media (min-width: 1000px) {
+  section.one > * {
+    font-size: 1.7999999999999998em;
+  }
+}
+section.one .columns .column:first-child {
+  max-width: 370px;
+}
+section.two {
+  background-color: #efeae1;
+  color: #5c5c5c;
+  border-bottom: 0.4em solid rgba(204, 187, 158, 0.7);
+}
+@media (min-width: 200px) {
+  section.two > * {
+    font-size: 0.6em;
+  }
+}
+@media (min-width: 400px) {
+  section.two > * {
+    font-size: 0.8999999999999999em;
+  }
+}
+@media (min-width: 600px) {
+  section.two > * {
+    font-size: 1.2em;
+  }
+}
+@media (min-width: 800px) {
+  section.two > * {
+    font-size: 1.5em;
+  }
+}
+@media (min-width: 1000px) {
+  section.two > * {
+    font-size: 1.7999999999999998em;
+  }
+}
+section.two .columns .column:first-child {
+  width: 313px;
+}
+section.three {
+  background-color: #ffffff;
+  color: #7c7c7c;
+  border-bottom: 0.4em solid rgba(204, 204, 204, 0.7);
+}
+@media (min-width: 200px) {
+  section.three > * {
+    font-size: 0.6em;
+  }
+}
+@media (min-width: 400px) {
+  section.three > * {
+    font-size: 0.8999999999999999em;
+  }
+}
+@media (min-width: 600px) {
+  section.three > * {
+    font-size: 1.2em;
+  }
+}
+@media (min-width: 800px) {
+  section.three > * {
+    font-size: 1.5em;
+  }
+}
+@media (min-width: 1000px) {
+  section.three > * {
+    font-size: 1.7999999999999998em;
+  }
+}
+@media (min-width: 400px) {
+  section.three .logos .logo img,
+  section.three .logos .desc {
+    height: 70px;
+  }
+}
+@media (min-width: 600px) {
+  section.three .logos .logo img,
+  section.three .logos .desc {
+    height: 80px;
+  }
+}
+@media (min-width: 800px) {
+  section.three .logos .logo img,
+  section.three .logos .desc {
+    height: 120px;
+  }
+}
+section.three .logos .logo {
+  text-align: center;
+  float: left;
+  width: 140px;
+  margin-right: 30px;
+}
+section.three .logos .desc {
+  padding-bottom: 5px;
 }
