--- a/src/index.jade
+++ b/src/index.jade
@@ -3,15 +3,89 @@ html
   head
     title Voix
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
-    link(rel='stylesheet' href='/assets/css/bootstrap.min.css')
+    link(href='//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css'
+      rel='stylesheet')
     link(rel='stylesheet' href='/assets/css/main.css')
     <!--[if lt IE 9]>
     script(src='/assets/js/html5shiv.js')
     script(src='/assets/js/respond.min.js')
     <![enif]-->
   body
-    .top-line Voix
-      .small soon
-      img(src='/assets/img/doge.jpeg')
-    script(src='/assets/js/jquery.min.js')
-    script(src='/assets/js/bootstrap.min.js')
+    header
+      .voix-brand
+    section.one
+      .columns
+          .column.left
+            h2 Наши цели
+            p Мы специализируемся на создании корпоративного ПО любой сложности.
+            p При разработке мы делаем основной упор на удобство для конечного пользователя.
+            p Вторым приоритетом для нас является скорость установки, обновления и настройки нашего ПО.
+            p Мы очень любим эксперементировать со всем новым и всегда стараемся находиться на острие прогресса.
+          .column.right
+            img(src='/assets/img/about.png')
+    section.two
+      .columns
+          .column.left
+            img(src='/assets/img/workflow.png')
+          .column.right
+            h2 Чего мы уже достигли
+            p Наши специалисты имеют опыт работы с Web и GIS технологиями с 2005 года.
+            p.
+              Работая для крупных корпоративных заказчиков, мы оптимизировали все наши внутренние
+              процессы.
+            p.
+              Мы верим что удобство работы наших сотрудников превыше всего, поэтому у нас используются
+              самые новые и совершенные инструменты разработки.
+    section.three
+      .columns
+        .column
+          h2 Наш текущий стек технологий
+      .logos
+        .logo
+          a(href='http://nodejs.org')
+            img(src='/assets/img/nodejs.png', title='NodeJS')
+        .desc
+          h3 NodeJS
+          p.
+            Идеален для быстрого прототипирования и создания RESTful JSON API.
+            А с помощью node-webkit можно создавать полноценные десктоп приложения.
+            Огромный выбор библиотек NodeJS с открытым кодом трудно переоценить.
+      .logos
+        .logo
+          a(href='http://www.html5rocks.com/', title='HTML5')
+            img(src='/assets/img/html5.png')
+        .desc
+          h3 HTML5
+          p.
+            Мы стараемся ориентироваться на современные браузеры, в которых развита поддержка HTML5,
+            это позволяет нам максимизировать удобство пользователей.
+      .logos
+        .logo
+          a(href='http://angularjs.org/')
+            img(src='/assets/img/angular.png', title='AngularJS')
+        .desc
+          h3 AngularJS
+          p.
+            Этот фреймворк от Google уже 2-й год наш постоянный спутник во всех проектах. Его широкие
+            возможности тестирования, удобная система модулей и простота нам не оставили выбора.
+      .logos
+        .logo
+          a(href='http://golang.org/')
+            img(src='/assets/img/golang.png', title='Go Language')
+        .desc
+          h3 Go language
+          p.
+            Когда нужно написать какой-либо инструмент, установка которого заключается в
+            простом копировании исполняемого файла Go незаменим. Помимо этого Go ориентирован на
+            системы с большим количеством процессоров.
+      .logos
+        .logo
+          a(href='http://java.com/')
+            img(src='/assets/img/java.png', title='Java')
+        .desc
+          h3 Java
+          p.
+            Java в наши дни продолжает радовать новыми версиями, а ее возможности обратной совместимости
+            отлично подходят для интеграции со старыми системами.
+    footer.
+      oh hai!
