--- a/src/less/main.less
+++ b/src/less/main.less
@@ -1,31 +1,113 @@
 @import '../../bower_components/mrmrs-colors/less/colors';
-@import url('http://fonts.googleapis.com/css?family=Raleway');
+@import 'variables';
+@import 'mixins';
+@import url('http://fonts.googleapis.com/css?family=Orbitron:700');
 
-body {
-  background-color: @orange;
+html, body {
+  margin: 0;
 }
 
-.top-line {
-  position: absolute;
-  z-index: 100;
-  top: 0;
-  left: 0;
-  right: 0;
-  padding-bottom: 30px;
-  font-family: 'Raleway', sans-serif;
-  @media (min-width: 400px) {
-    font-size: 14em;
+body {
+  font-size: 62.5%;
+}
+
+.voix-brand {
+  &:before {
+    letter-spacing: 0.13em;
+    content: 'voi';
   }
-  @media (min-width: 700px) {
-    font-size: 18em;
+  &:after {
+    letter-spacing: 0;
+    content: 'x';
   }
-  @media (max-width: 400px) {
-    font-size: 10em;
+  margin: 0;
+  font-variant: small-caps;
+  font-family: 'Orbitron', sans-serif;
+  display: inline-block;
+  line-height: 0.8em;
+}
+
+header {
+    .sector(@header-bg, @header-color, 3.5, false);
+    text-align: center;
+    padding-bottom: 0.2em;
+    padding-top: 0.2em;
+    padding-left: 1em;
+}
+
+section {
+  padding: 30px 0 30px 0;
+  font-family: 'Helvetica Neue', Helvetica, arial, freesans, clean, sans-serif;
+  width: 100%;
+  h2 {
+    margin-top: 0;
+    font-weight: 400;
   }
-  color: @white;
-  text-align: center;
-  vertical-align: middle;
-  .small {
-    font-size: .2em;
+  h3 {
+    font-weight: 200;
+  }
+  .logos, .columns {
+    max-width: 1130px;
+    margin: 0 auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+  .logos {
+    padding-bottom: 30px;
+  }
+  img {
+    border-radius: 6px;
+    max-width: 100%;
+  }
+  .columns {
+    display: table;
+    .column {
+      vertical-align: top;
+      display: table-cell;
+      &:first-child {
+        padding-right: 30px;
+        padding-left: 10px;
+      }
+      &:last-child {
+        padding-left: 30px;
+        padding-right: 10px;
+      }
+    }
+  }
+  &.one {
+    .sector(@section-one-bg, @section-one-color, 0.6, true);
+    .columns .column:first-child {
+      max-width: 370px;
+    }
+  }
+  &.two {
+    .sector(@section-two-bg, @section-two-color, 0.6, true);
+    .columns .column:first-child {
+      width: 313px;
+    }
+  }
+  &.three {
+    .sector(@section-three-bg, @section-one-color, 0.6, true);
+    .logos .logo img,
+    .logos .desc {
+      @media (min-width: 400px) {
+        height: 70px;
+      }
+      @media (min-width: 600px) {
+        height: 80px;
+      }
+      @media (min-width: 800px) {
+        height: 120px;
+      }
+    }
+    .logos .logo {
+      text-align: center;
+      float: left;
+      width: 140px;
+      margin-right: 30px;
+    }
+    .logos .desc {
+      padding-bottom: 5px;
+    }
   }
 }
