--- a/src/index.jade
+++ b/src/index.jade
@@ -14,79 +14,83 @@ html
   body
     header
       .voix-brand
-    section.one
-      .columns
-          .column.left
-            h2 Наши цели
-            p Мы специализируемся на создании корпоративного ПО любой сложности.
-            p При разработке мы делаем основной упор на удобство для конечного пользователя.
-            p Вторым приоритетом для нас является скорость установки, обновления и настройки нашего ПО.
-            p Мы очень любим эксперементировать со всем новым и всегда стараемся находиться на острие прогресса.
-          .column.right
-            img(src='/assets/img/about.png')
-    section.two
-      .columns
-          .column.left
-            img(src='/assets/img/workflow.png')
-          .column.right
-            h2 Чего мы уже достигли
-            p Наши специалисты имеют опыт работы с Web и GIS технологиями с 2005 года.
+    .content
+      section.one
+        .columns
+            .column.left
+              h2 Наши цели
+              p Мы специализируемся на создании корпоративного ПО любой сложности.
+              p При разработке мы делаем основной упор на удобство для конечного пользователя.
+              p Вторым приоритетом для нас является скорость установки, обновления и настройки нашего ПО.
+              p Мы очень любим эксперементировать со всем новым и всегда стараемся находиться на острие прогресса.
+            .column.right
+              img(src='/assets/img/about.png')
+      section.two
+        .columns
+            .column.left
+              img(src='/assets/img/workflow.png')
+            .column.right
+              h2 Чего мы уже достигли
+              p Наши специалисты имеют опыт работы с Web и GIS технологиями с 2005 года.
+              p.
+                Работая для крупных корпоративных заказчиков, мы оптимизировали все наши внутренние
+                процессы.
+              p.
+                Мы верим что удобство работы наших сотрудников превыше всего, поэтому у нас используются
+                самые новые и совершенные инструменты разработки.
+      section.three
+        .columns
+          .column
+            h2 Наш текущий стек технологий
+        .logos
+          .logo
+            a(href='http://nodejs.org')
+              img(src='/assets/img/nodejs.png', title='NodeJS')
+          .desc
+            h3 NodeJS
             p.
-              Работая для крупных корпоративных заказчиков, мы оптимизировали все наши внутренние
-              процессы.
+              Идеален для быстрого прототипирования и создания RESTful JSON API.
+              А с помощью node-webkit можно создавать полноценные десктоп приложения.
+              Огромный выбор библиотек NodeJS с открытым кодом трудно переоценить.
+        .logos
+          .logo
+            a(href='http://www.html5rocks.com/', title='HTML5')
+              img(src='/assets/img/html5.png')
+          .desc
+            h3 HTML5
             p.
-              Мы верим что удобство работы наших сотрудников превыше всего, поэтому у нас используются
-              самые новые и совершенные инструменты разработки.
-    section.three
-      .columns
-        .column
-          h2 Наш текущий стек технологий
-      .logos
-        .logo
-          a(href='http://nodejs.org')
-            img(src='/assets/img/nodejs.png', title='NodeJS')
-        .desc
-          h3 NodeJS
-          p.
-            Идеален для быстрого прототипирования и создания RESTful JSON API.
-            А с помощью node-webkit можно создавать полноценные десктоп приложения.
-            Огромный выбор библиотек NodeJS с открытым кодом трудно переоценить.
-      .logos
-        .logo
-          a(href='http://www.html5rocks.com/', title='HTML5')
-            img(src='/assets/img/html5.png')
-        .desc
-          h3 HTML5
-          p.
-            Мы стараемся ориентироваться на современные браузеры, в которых развита поддержка HTML5,
-            это позволяет нам максимизировать удобство пользователей.
-      .logos
-        .logo
-          a(href='http://angularjs.org/')
-            img(src='/assets/img/angular.png', title='AngularJS')
-        .desc
-          h3 AngularJS
-          p.
-            Этот фреймворк от Google уже 2-й год наш постоянный спутник во всех проектах. Его широкие
-            возможности тестирования, удобная система модулей и простота нам не оставили выбора.
-      .logos
-        .logo
-          a(href='http://golang.org/')
-            img(src='/assets/img/golang.png', title='Go Language')
-        .desc
-          h3 Go language
-          p.
-            Когда нужно написать какой-либо инструмент, установка которого заключается в
-            простом копировании исполняемого файла Go незаменим. Помимо этого Go ориентирован на
-            системы с большим количеством процессоров.
-      .logos
-        .logo
-          a(href='http://java.com/')
-            img(src='/assets/img/java.png', title='Java')
-        .desc
-          h3 Java
-          p.
-            Java в наши дни продолжает радовать новыми версиями, а ее возможности обратной совместимости
-            отлично подходят для интеграции со старыми системами.
-    footer.
-      oh hai!
+              Мы стараемся ориентироваться на современные браузеры, в которых развита поддержка HTML5,
+              это позволяет нам максимизировать удобство пользователей.
+        .logos
+          .logo
+            a(href='http://angularjs.org/')
+              img(src='/assets/img/angular.png', title='AngularJS')
+          .desc
+            h3 AngularJS
+            p.
+              Этот фреймворк от Google уже 2-й год наш постоянный спутник во всех проектах. Его широкие
+              возможности тестирования, удобная система модулей и простота нам не оставили выбора.
+        .logos
+          .logo
+            a(href='http://golang.org/')
+              img(src='/assets/img/golang.png', title='Go Language')
+          .desc
+            h3 Go language
+            p.
+              Когда нужно написать какой-либо инструмент, установка которого заключается в
+              простом копировании исполняемого файла Go незаменим. Помимо этого Go ориентирован на
+              системы с большим количеством процессоров.
+        .logos
+          .logo
+            a(href='http://java.com/')
+              img(src='/assets/img/java.png', title='Java')
+          .desc
+            h3 Java
+            p.
+              Java в наши дни продолжает радовать новыми версиями, а ее возможности обратной совместимости
+              отлично подходят для интеграции со старыми системами.
+    footer
+      .copy
+        | Copyright 2014,
+        span.voix Voix
+        |, LLC. All rights reserved.
