--- a/src/less/main.less
+++ b/src/less/main.less
@@ -11,6 +11,12 @@ body {
   font-size: 62.5%;
 }
 
+.content {
+  position: relative;
+  z-index: 100;
+  margin-bottom: 6em;
+}
+
 .voix-brand {
   &:before {
     letter-spacing: 0.13em;
@@ -108,6 +114,27 @@ section {
     }
     .logos .desc {
       padding-bottom: 5px;
+    }
+  }
+}
+
+footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 6em;
+  background-color: @footer-bg;
+  color: @footer-color;
+  z-index: 50;
+  text-align: center;
+  .copy {
+    font-size: 1.4em;
+    padding-top: 1.4em;
+    // padding-right: 2em;
+    font-family: sans-serif;
+    .voix {
+      font-family: 'Orbitron', sans-serif;
     }
   }
 }
