--- a/src/less/main.less
+++ b/src/less/main.less
@@ -42,7 +42,7 @@ header {
 }
 
 section {
-  padding: 30px 0 30px 0;
+  padding: 1em 0 1em 0;
   font-family: 'Helvetica Neue', Helvetica, arial, freesans, clean, sans-serif;
   width: 100%;
   h2 {
@@ -53,7 +53,7 @@ section {
     font-weight: 200;
   }
   .logos, .columns {
-    max-width: 1130px;
+    max-width: 60em;
     margin: 0 auto;
     margin-top: 10px;
     margin-bottom: 10px;
@@ -71,12 +71,12 @@ section {
       vertical-align: top;
       display: table-cell;
       &:first-child {
-        padding-right: 30px;
-        padding-left: 10px;
+        padding-right: 0.5em;
+        padding-left: 0.3em;
       }
       &:last-child {
-        padding-left: 30px;
-        padding-right: 10px;
+        padding-left: 0.5em;
+        padding-right: 0.3em;
       }
     }
   }
@@ -110,10 +110,10 @@ section {
       text-align: center;
       float: left;
       width: 140px;
-      margin-right: 30px;
+      margin-right: 0.5em;
     }
     .logos .desc {
-      padding-bottom: 5px;
+      padding-bottom: 0.2em;
     }
   }
 }
