second section css tune

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -88,8 +88,8 @@ section {
   }
   &.two {
     .sector(@section-two-bg, @section-two-color, 0.6, true);
-    .columns .column:first-child {
-      width: 313px;
+    .columns .column:last-child {
+      max-width: 670px;
     }
   }
   &.three {
