html and angular svg logos and orange header

--- a/src/index.jade
+++ b/src/index.jade
@@ -54,7 +54,7 @@ html
         .logos
           .logo
             a(href='http://www.html5rocks.com/', title='HTML5')
-              img(src='/assets/img/html5.png')
+              img(src='/assets/img/html5.svg')
           .desc
             h3 HTML5
             p.
@@ -63,7 +63,7 @@ html
         .logos
           .logo
             a(href='http://angularjs.org/')
-              img(src='/assets/img/angular.png', title='AngularJS')
+              img(src='/assets/img/angular.svg', title='AngularJS')
           .desc
             h3 AngularJS
             p.
