--- a/src/less/main.less
+++ b/src/less/main.less
@@ -34,7 +34,7 @@ body {
 }
 
 header {
-    .sector(@header-bg, @header-color, 3.5, false);
+    .sector(@header-bg, @header-color, 3.5, true);
     text-align: center;
     padding-bottom: 0.2em;
     padding-top: 0.2em;
