--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -1,6 +1,6 @@
 @brand-border: 0.03em solid #fff;
 
-@header-bg: #453f3e;
+@header-bg: @orange;
 
 @header-color: #f0ebdd;
 @section-one-bg: @white;
