--- a/src/index.jade
+++ b/src/index.jade
@@ -27,7 +27,7 @@ html
       section.two
         .columns
             .column.left
-              img(src='/assets/img/workflow.png')
+              img(src='/assets/img/workflow.svg')
             .column.right
               h2 Чего мы уже достигли
               p Наши специалисты имеют опыт работы с Web и GIS технологиями с 2005 года.
@@ -44,7 +44,7 @@ html
         .logos
           .logo
             a(href='http://nodejs.org')
-              img(src='/assets/img/nodejs.png', title='NodeJS')
+              img(src='/assets/img/nodejs.svg', title='NodeJS')
           .desc
             h3 NodeJS
             p.
