tech stack in separate header

--- a/src/index.jade
+++ b/src/index.jade
@@ -29,7 +29,7 @@ html
             .column.left
               img(src='/assets/img/workflow.svg')
             .column.right
-              h2 Чего мы уже достигли
+              h2 Что мы уже достигли
               p Наши специалисты имеют опыт работы с Web и GIS технологиями с 2005 года.
               p.
                 Работая для крупных корпоративных заказчиков, мы оптимизировали все наши внутренние
@@ -41,6 +41,7 @@ html
         .columns
           .column
             h2 Наш текущий стек технологий
+      section.four
         .logos
           .logo
             a(href='http://nodejs.org')
