--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -1,15 +1,19 @@
 @brand-border: 0.03em solid #fff;
 
 @header-bg: @orange;
+@header-color: @white;
 
-@header-color: #f0ebdd;
 @section-one-bg: @white;
+@section-one-color: #737373;
 
-@section-one-color: #7c7c7c;
 @section-two-bg: #efeae1;
-
 @section-two-color: #5c5c5c;
-@section-three-bg: @white;
 
-@footer-bg: #2b303a;
+@section-three-bg: @white;
+@section-three-color: @section-one-color;
+
+@section-four-bg: #ac99b3;
+@section-four-color: @white;
+
+@footer-bg: #3a424f;
 @footer-color: #aa8a69;
