java logo svg, logos padding 20px

--- a/src/index.jade
+++ b/src/index.jade
@@ -73,7 +73,7 @@ html
         .logos
           .logo
             a(href='http://golang.org/')
-              img(src='/assets/img/golang.png', title='Go Language')
+              img(src='/assets/img/golang.svg', title='Go Language')
           .desc
             h3 Go language
             p.
@@ -83,7 +83,7 @@ html
         .logos
           .logo
             a(href='http://java.com/')
-              img(src='/assets/img/java.png', title='Java')
+              img(src='/assets/img/java.svg', title='Java')
           .desc
             h3 Java
             p.
