third section paddings, header padding, grammar fix

--- a/src/index.jade
+++ b/src/index.jade
@@ -40,7 +40,7 @@ html
       section.three
         .columns
           .column
-            h2 Наш текущий стек технологий
+            h2 Текущий стек наших технологий
       section.four
         .logos
           .logo
