--- a/src/less/main.less
+++ b/src/less/main.less
@@ -36,8 +36,8 @@ body {
 header {
     .sector(@header-bg, @header-color, 3.5, true);
     text-align: center;
-    padding-bottom: 0.2em;
-    padding-top: 0.2em;
+    padding-bottom: 1em;
+    padding-top: 1em;
     padding-left: 1em;
 }
 
@@ -95,6 +95,8 @@ section {
   }
   &.three {
     .sector(@section-four-bg, @section-four-color, 1, true);
+    padding-top: 1px;
+    padding-bottom: 0;
   }
   &.four {
     .sector(@section-three-bg, @section-three-color, 0.6, true);
