--- a/src/index.jade
+++ b/src/index.jade
@@ -47,26 +47,30 @@ html
             a(href='http://nodejs.org')
               img(src='/assets/img/nodejs.svg', title='NodeJS')
           .desc
-            h3 NodeJS
+            a(href='http://nodejs.org')
+              h3 NodeJS
             p.
               Идеален для быстрого прототипирования и создания RESTful JSON API.
-              А с помощью node-webkit можно создавать полноценные десктоп приложения.
-              Огромный выбор библиотек NodeJS с открытым кодом трудно переоценить.
+              С помощью node-webkit можно разрабатывать полноценные десктоп приложения.
+              А огромный выбор библиотек с открытым кодом трудно переоценить.
         .logos
           .logo
             a(href='http://www.html5rocks.com/', title='HTML5')
               img(src='/assets/img/html5.svg')
           .desc
-            h3 HTML5
+            a(href='http://www.html5rocks.com/', title='HTML5')
+              h3 HTML5
             p.
               Мы стараемся ориентироваться на современные браузеры, в которых развита поддержка HTML5,
-              это позволяет нам максимизировать удобство пользователей.
+              это позволяет нам максимизировать удобство пользователей и наших разработчиков,
+              а также снизить цены на продукт.
         .logos
           .logo
             a(href='http://angularjs.org/')
               img(src='/assets/img/angular.svg', title='AngularJS')
           .desc
-            h3 AngularJS
+            a(href='http://angularjs.org/')
+              h3 AngularJS
             p.
               Этот фреймворк от Google уже 2-й год наш постоянный спутник во всех проектах. Его широкие
               возможности тестирования, удобная система модулей и простота нам не оставили выбора.
@@ -75,17 +79,19 @@ html
             a(href='http://golang.org/')
               img(src='/assets/img/golang.svg', title='Go Language')
           .desc
-            h3 Go language
+            a(href='http://golang.org/')
+              h3 Go language
             p.
               Когда нужно написать какой-либо инструмент, установка которого заключается в
-              простом копировании исполняемого файла Go незаменим. Помимо этого Go ориентирован на
-              системы с большим количеством процессоров.
+              простом копировании исполняемого файла, Go незаменим. Помимо этого Go очень удобен в
+              разработке многопоточных систем.
         .logos
           .logo
             a(href='http://java.com/')
               img(src='/assets/img/java.svg', title='Java')
           .desc
-            h3 Java
+            a(href='http://java.com/')
+              h3 Java
             p.
               Java в наши дни продолжает радовать новыми версиями, а ее возможности обратной совместимости
               отлично подходят для интеграции со старыми системами.
