--- a/src/index.jade
+++ b/src/index.jade
@@ -40,7 +40,7 @@ html
       section.three
         .columns
           .column
-            h2 Стек используемях нами технологий
+            h2 Стек используемых нами технологий
       section.four
         .logos
           .logo
