--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -9,11 +9,11 @@
 @section-two-bg: #efeae1;
 @section-two-color: #5c5c5c;
 
-@section-three-bg: @white;
-@section-three-color: @section-one-color;
+@section-three-bg: #b6ab9c;
+@section-three-color: @white;
 
-@section-four-bg: #ac99b3;
-@section-four-color: @white;
+@section-four-bg: @white;
+@section-four-color: @section-one-color;
 
 @footer-bg: #3a424f;
 @footer-color: #aa8a69;
