added contact email to footer

--- a/src/index.jade
+++ b/src/index.jade
@@ -100,3 +100,5 @@ html
         | Copyright 2014,
         span.voix Voix
         |, LLC. All rights reserved.
+      .contact
+        a(href='mailto:team@voix.io') team@voix.io
