--- a/src/less/main.less
+++ b/src/less/main.less
@@ -136,6 +136,20 @@ footer {
   color: @footer-color;
   z-index: 50;
   text-align: center;
+  .contact {
+    a {
+      color: @footer-color;
+      &:hover {
+        color: @white;
+      }
+    }
+    position: absolute;
+    right: 2em;
+    top: 1.4em;
+    font-size: 1.4em;
+    font-family: sans-serif;
+    margin-left: 2em;
+  }
   .copy {
     font-size: 1.4em;
     padding-top: 1.4em;
