font changed and some content edits

--- a/src/index.jade
+++ b/src/index.jade
@@ -29,7 +29,7 @@ html
             .column.left
               img(src='/assets/img/workflow.svg')
             .column.right
-              h2 Чего мы уже достигли
+              h2 Наш опыт
               p Наши специалисты имеют опыт работы с Web и GIS технологиями с 2005 года.
               p.
                 Работая для крупных корпоративных заказчиков, мы оптимизировали все наши внутренние
@@ -37,6 +37,11 @@ html
               p.
                 Мы верим что удобство работы наших сотрудников превыше всего, поэтому у нас используются
                 самые новые и совершенные инструменты разработки.
+              p Мы большие поклонники книг&nbsp;
+                a(href='https://37signals.com/rework/') Rework
+                | &nbsp; и &nbsp;
+                a(href='https://37signals.com/remote/') Remote
+                | &nbsp;и наша деятельность построена на удаленном взаимодействии между сотрудниками.
       section.three
         .columns
           .column
@@ -83,7 +88,7 @@ html
               h3 Go language
             p.
               Когда нужно написать какой-либо инструмент, установка которого заключается в
-              простом копировании исполняемого файла, Go незаменим. Помимо этого Go очень удобен в
+              простом копировании исполняемого файла, Go незаменим. Помимо этого, Go очень удобен в
               разработке многопоточных систем.
         .logos
           .logo
