--- a/src/less/main.less
+++ b/src/less/main.less
@@ -9,6 +9,8 @@ html, body {
 
 body {
   font-size: 62.5%;
+  font-family: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif;
+  font-weight: 300;
 }
 
 .content {
@@ -43,7 +45,6 @@ header {
 
 section {
   padding: 1.5em 0 1.5em 0;
-  font-family: 'Helvetica Neue', Helvetica, arial, freesans, clean, sans-serif;
   width: 100%;
   h2 {
     margin-top: 0;
