added twitter link in header

--- a/src/index.jade
+++ b/src/index.jade
@@ -13,6 +13,9 @@ html
   body
     header
       .voix-brand
+      .social
+        a(href='https://twitter.com/teamvoix')
+          span.symbol &#xe286;
     .content
       section.one
         .columns
