using font-awesome instead of MonoSocialIcons

--- a/src/index.jade
+++ b/src/index.jade
@@ -13,9 +13,6 @@ html
   body
     header
       .voix-brand
-      .social
-        a(href='https://twitter.com/teamvoix')
-          span.symbol &#xe286;
     .content
       section.one
         .columns
@@ -106,7 +103,10 @@ html
     footer
       .copy
         | Copyright 2014,
-        span.voix Voix
+        span.voix VOIX
         |, LLC. All rights reserved.
-      .contact
+      .social
+        a(href='https://twitter.com/teamvoix')
+          span.fa.fa-twitter
+        |&nbsp;|&nbsp;
         a(href='mailto:team@voix.io') team@voix.io
