--- a/src/index.jade
+++ b/src/index.jade
@@ -17,11 +17,23 @@ html
       section.one
         .columns
             .column.left
-              h2 Наши цели
-              p Мы специализируемся на создании корпоративного ПО любой сложности.
-              p При разработке мы делаем основной упор на удобство для конечного пользователя.
-              p Вторым приоритетом для нас является скорость установки, обновления и настройки нашего ПО.
-              p Мы очень любим эксперементировать со всем новым и всегда стараемся находиться на острие прогресса.
+              h2 Наши приоритеты
+              p
+                i.fa.fa-check
+                b  Качественное ПО.
+                |  Мы специализируемся на создании корпоративного ПО любой сложности.
+              p
+                i.fa.fa-check
+                b  Удобство.
+                |  При разработке мы делаем основной упор на удобство для конечного пользователя.
+              p
+                i.fa.fa-check
+                b  Быстрая реакция.
+                |  Акцент на скорости установки, обновления и настройки нашего ПО.
+              p
+                i.fa.fa-check
+                b  Вперед.
+                |  Мы очень любим эксперементировать со всем новым и всегда стараемся находиться на острие прогресса.
             .column.right
               img(src='/assets/img/about.png')
       section.two
@@ -30,18 +42,24 @@ html
               img(src='/assets/img/workflow.svg')
             .column.right
               h2 Наш опыт
-              p Наши специалисты имеют опыт работы с Web и GIS технологиями с 2005 года.
-              p.
-                Работая для крупных корпоративных заказчиков, мы оптимизировали все наши внутренние
-                процессы.
-              p.
-                Мы верим что удобство работы наших сотрудников превыше всего, поэтому у нас используются
-                самые новые и совершенные инструменты разработки.
-              p Мы большие поклонники книг&nbsp;
-                a(href='https://37signals.com/rework/') Rework
-                | &nbsp; и &nbsp;
-                a(href='https://37signals.com/remote/') Remote
-                | &nbsp;и наша деятельность построена на удаленном взаимодействии между сотрудниками.
+              p
+                i.fa.fa-check
+                |  Наши специалисты имеют опыт работы с Web и GIS технологиями с 2005 года.
+              p
+                i.fa.fa-check
+                |  Работая для крупных корпоративных заказчиков, мы оптимизировали все наши внутренние
+                | процессы.
+              p
+                i.fa.fa-check
+                |  Мы верим что удобство работы наших сотрудников превыше всего, поэтому у нас используются
+                | самые новые и совершенные инструменты разработки.
+              p
+                i.fa.fa-check
+                |  Мы большие поклонники книг
+                a(href='https://37signals.com/rework/')  Rework
+                |  и
+                a(href='https://37signals.com/remote/')  Remote
+                |  и наша деятельность построена на удаленном взаимодействии между сотрудниками.
       section.three
         .columns
           .column
