--- a/src/index.jade
+++ b/src/index.jade
@@ -33,7 +33,7 @@ html
               p
                 i.fa.fa-check
                 b  Вперед.
-                |  Мы очень любим эксперементировать со всем новым и всегда стараемся находиться на острие прогресса.
+                |  Мы очень любим пробовать все новое и стараемся всегда находиться на острие прогресса.
             .column.right
               img(src='/assets/img/about.png')
       section.two
