footer media query for small width

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -140,8 +140,8 @@ footer {
   .social {
     position: absolute;
     right: 2em;
-    top: 1em;
-    font-size: 2em;
+    top: 0.9em;
+    font-size: 1.8em;
     margin-left: 2em;
     vertical-align: top;
     a {
@@ -151,6 +151,10 @@ footer {
         color: @white;
       }
     }
+    @media (max-width: 670px) {
+      margin-top: -0.5em;
+      position: relative;
+    }
   }
   .copy {
     font-size: 1.4em;
@@ -158,6 +162,10 @@ footer {
     font-family: sans-serif;
     .voix {
       font-family: 'Orbitron', sans-serif;
+    }
+    @media (max-width: 670px) {
+      margin-top: 0.4em;
+      font-size: 1.1em;
     }
   }
 }
