--- a/src/index.jade
+++ b/src/index.jade
@@ -128,3 +128,10 @@ html
         | Copyright 2014,
         span.voix VOIX
         |, LLC. All rights reserved.
+    script.
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-49275214-1', 'viox.io');
+      ga('send', 'pageview');
