added language switcher and EN page

--- a/src/index.en.jade
+++ b/src/index.en.jade
@@ -14,20 +14,20 @@ html
   body
     header
       .voix-brand
-      a.language-switcher.en(href='/en') EN
+      a.language-switcher.ru(href='/') RU
     .content
       section.one
         .columns
             .column.left
-              h2 Наши приоритеты
+              h2 Our goals
               p
                 i.fa.fa-check
-                b  Качественное ПО.
-                |  Мы специализируемся на создании корпоративного ПО любой сложности.
+                b  Reliable software.
+                |  We create enterprise software of any complexity with long term support.
               p
                 i.fa.fa-check
-                b  Удобство.
-                |  При разработке мы делаем основной упор на удобство для конечного пользователя.
+                b  User friendly.
+                |  We use modern web technologies to create easy to use user interfaces.
               p
                 i.fa.fa-check
                 b  Быстрая реакция.
