english version edits

--- a/src/index.en.jade
+++ b/src/index.en.jade
@@ -43,29 +43,27 @@ html
             .column.left
               img(src='/assets/img/workflow.svg')
             .column.right
-              h2 Наш опыт
+              h2 Experience
               p
                 i.fa.fa-check
-                |  Наши специалисты имеют опыт работы с Web и GIS технологиями с 2005 года.
+                |  Our developers are creating Web and GIS apps since 2005.
               p
                 i.fa.fa-check
-                |  Работая для крупных корпоративных заказчиков, мы оптимизировали все наши внутренние
-                | процессы.
+                |  We optimized our workflow for dealing with big enterprise customers.
               p
                 i.fa.fa-check
-                |  Мы верим что удобство работы наших сотрудников превыше всего, поэтому у нас используются
-                | самые новые и совершенные инструменты разработки.
+                |  We believe in comfort of our employees, that's why we use best tools in the market.
               p
                 i.fa.fa-check
-                |  Мы большие поклонники книг
+                |  We are big fans of
                 a(href='https://37signals.com/rework/')  Rework
-                |  и
+                |  &
                 a(href='https://37signals.com/remote/')  Remote
-                |  и наша деятельность построена на удаленном взаимодействии между сотрудниками.
+                |  books and most of our activity is based on remote collaboration.
       section.three
         .columns
           .column
-            h2 Стек используемых нами технологий
+            h2 Our technology stack
       section.four
         .logos
           .logo
@@ -75,9 +73,9 @@ html
             a(href='http://nodejs.org')
               h3 NodeJS
             p.
-              Идеален для быстрого прототипирования и создания RESTful JSON API.
-              С помощью node-webkit можно разрабатывать полноценные десктоп приложения.
-              А огромный выбор библиотек с открытым кодом трудно переоценить.
+              Is ideal for prototyping and create RESTful JSON APIs.
+              Node-webkit allows us to create fully functional desktop apps.
+              Tens of thousands open source libraries is a ...
         .logos
           .logo
             a(href='http://www.html5rocks.com/', title='HTML5')
