--- a/src/index.jade
+++ b/src/index.jade
@@ -4,7 +4,7 @@ html
     title Voix
     meta(charset='utf-8')
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
-    script(src='/assets/js/main.js')
+    //- script(src='/assets/js/main.js')
     link(href='//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css'
       rel='stylesheet')
     link(rel='stylesheet' href='/assets/css/main.css')
@@ -14,7 +14,7 @@ html
   body
     header
       .voix-brand
-      a.language-switcher.en(href='/en') EN
+      //- a.language-switcher.en(href='/en') EN
     .content
       section.one
         .columns
