location info and some keywords

--- a/src/index.jade
+++ b/src/index.jade
@@ -3,6 +3,10 @@ html
   head
     title Voix
     meta(charset='utf-8')
+    meta(name='description'
+      content='ТОО Voix, Разработка ПО и сайтов, г.Алматы, Казахстан')
+    meta(name='keywords'
+      content='Разработка ПО, автоматизация, сайты, Алматы, Казахстан')
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
     //- script(src='/assets/js/main.js')
     link(href='//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css'
@@ -23,7 +27,7 @@ html
               p
                 i.fa.fa-check
                 b  Качественное ПО.
-                |  Мы специализируемся на создании корпоративного ПО любой сложности.
+                |  Мы специализируемся на создании корпоративного ПО и веб-сайтов любой сложности.
               p
                 i.fa.fa-check
                 b  Удобство.
@@ -37,11 +41,11 @@ html
                 b  Вперед.
                 |  Мы очень любим пробовать все новое и стараемся всегда находиться на острие прогресса.
             .column.right
-              img(src='/assets/img/about.png')
+              img(src='/assets/img/about.png' alt='Рабочая среда')
       section.two
         .columns
             .column.left
-              img(src='/assets/img/workflow.svg')
+              img(src='/assets/img/workflow.svg' alt='Рабочий процесс')
             .column.right
               h2 Наш опыт
               p
@@ -70,7 +74,7 @@ html
         .logos
           .logo
             a(href='http://nodejs.org')
-              img(src='/assets/img/nodejs.svg', title='NodeJS')
+              img(src='/assets/img/nodejs.svg' title='NodeJS' alt='NodeJS')
           .desc
             a(href='http://nodejs.org')
               h3 NodeJS
@@ -80,8 +84,8 @@ html
               А огромный выбор библиотек с открытым кодом трудно переоценить.
         .logos
           .logo
-            a(href='http://www.html5rocks.com/', title='HTML5')
-              img(src='/assets/img/html5.svg')
+            a(href='http://www.html5rocks.com/')
+              img(src='/assets/img/html5.svg' alt='HTML5' title='HTML5')
           .desc
             a(href='http://www.html5rocks.com/', title='HTML5')
               h3 HTML5
@@ -92,7 +96,7 @@ html
         .logos
           .logo
             a(href='http://angularjs.org/')
-              img(src='/assets/img/angular.svg', title='AngularJS')
+              img(src='/assets/img/angular.svg' alt='AngularJS' title='AngularJS')
           .desc
             a(href='http://angularjs.org/')
               h3 AngularJS
@@ -102,7 +106,7 @@ html
         .logos
           .logo
             a(href='http://golang.org/')
-              img(src='/assets/img/golang.svg', title='Go Language')
+              img(src='/assets/img/golang.svg' alt='Go Language' title='Go Language')
           .desc
             a(href='http://golang.org/')
               h3 Go language
@@ -113,7 +117,7 @@ html
         .logos
           .logo
             a(href='http://java.com/')
-              img(src='/assets/img/java.svg', title='Java')
+              img(src='/assets/img/java.svg' alt='Java' title='Java')
           .desc
             a(href='http://java.com/')
               h3 Java
@@ -127,9 +131,9 @@ html
         |&nbsp;|&nbsp;
         a(href='mailto:team@voix.io') team@voix.io
       .copy
-        | Copyright 2014,
-        span.voix VOIX
-        |, LLC. All rights reserved.
+        | ТОО
+        span.voix  Voix
+        |, г.Алматы, Казахстан.
     script.
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
