google verification meta tag

--- a/src/index.jade
+++ b/src/index.jade
@@ -8,6 +8,8 @@ html
     meta(name='keywords'
       content='Разработка ПО, автоматизация, сайты, Алматы, Казахстан')
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
+    meta(name='google-site-verification'
+      content='AUJxZrPDffY5MZKZ_w4EReCf2PYSCJAeQpvz6lqavNQ')
     //- script(src='/assets/js/main.js')
     link(href='//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css'
       rel='stylesheet')
