added about section

--- a/src/index.jade
+++ b/src/index.jade
@@ -22,6 +22,11 @@ html
       .voix-brand
       //- a.language-switcher.en(href='/en') EN
     .content
+      section.about
+        .columns
+          .column
+            //- h2 О нас
+            p Мы &mdash; активная и развивающаяся команда разработчиков, базирующаяся в г.Алматы, Казахстан.
       section.one
         .columns
             .column.left
@@ -40,7 +45,7 @@ html
                 |  Акцент на скорости установки, обновления и настройки нашего ПО.
               p
                 i.fa.fa-check
-                b  Вперед.
+                b  Быть на острие прогресса.
                 |  Мы очень любим пробовать все новое и стараемся всегда находиться на острие прогресса.
             .column.right
               img(src='/assets/img/about.png' alt='Рабочая среда')
