--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -3,6 +3,9 @@
 @header-bg: @orange;
 @header-color: @white;
 
+@section-about-bg: #2b303a;
+@section-about-color: #c0c5ce;
+
 @section-one-bg: @white;
 @section-one-color: #737373;
 
